@@ -1,0 +1,11 @@
+
+require 'test_helper'
+
+class ErrorsControllerTest < ActionController::TestCase
+
+  # Replace this with your real tests.
+
+  test "the truth" do
+    assert true
+  end
+end
