@@ -4,6 +4,8 @@
 
 == ruote-web2 - 0.9.20    not yet released
 
+- todo  #23600 : adapted to file renaming in ruote itself and introducing
+                 db_errorjournal
 - todo  #23185 : moved to blueprint
 - todo  #22935 : integrated LinkGenerator
 - todo  #22883 : upgraded to rails 2.2
